2004-05-28	blytkerchan
	* bookmarks.php: %s/mysql_real_escape_string/mysql_escape_string/g
	* comments.php: ditto
	* login_functions.php: ditto
	* session.php: ditto

	* mysql.php: new file (used previously: 2004-05-27)
	* bookmarks.php: set style for input elements to inputbox
	* comments.php: set date on new comments
	(get_comment_date): new function
	(get_comment_author): ditto
	* config.php: set $session to 0, not ""
	[$remembered]: new global variable
	* index.php: slightly change layout to add text left and right of section menu
	if logged in, display a welcome message left of section menu
	if remembered, display message right of section menu
	when displaying a comment, display the author and the date as well
	* login_functions.php (create_account): repair query
	(get_login_name): new function
	* login_menu.php: apply inputbox style to input elements
	re-arrange to compensate for new style
	* section_menu.php: compensate for layout changes in index.php
	* session.php (close_session): re-write
	(do_session): use global $remembered
	
2004-05-27	blytkerchan
	* main.php: remove
	* login_fail.php: new file
	* login_functions.php: ditto
	* bookmarks.php: s/session/user/ where appropriate
	don't connect to mysql DB - done at the start of the site
	don't disconnect either - done at the end of the site
	* comments.php: ditto (all three)
	(show_comments): show comments to non-logged-in users
	* config.php: new global variables: user, session and login_status
	* index.php: reformat code
	include login_functions.php
	make new logins here - not on login failure
	include and use login_fail.php when needed
	s/session/user/ where appropriate
	start by opening the DB, finish by closing it
	* login_create.php: re-write
	* login_menu.php: don't check the session to get the user ID - use the global variable

	* section_menu.php: generate the menu on the fly
	* session.php (check_session): re-write
	(close_session): ditto
	(open_session): remove